# sonder

./: .gitignore  README.md  agent_loop.py  gateway.toml.example  main.py  pyproject.toml
src/sonder/: __init__.py  __main__.py  app.py  logging.py  types.py
src/sonder/gateway/: __init__.py  app.py  config.py
src/sonder/llm/: base.py  openai_chat.py
src/sonder/runtime/: __init__.py  agent.py
src/sonder/storage/: __init__.py  memory.py
src/sonder/tools/: __init__.py  bash_tools.py  registry.py
src/sonder/transports/: __init__.py  cli.py  telegram.py
tests/: test_cli.py  test_gateway_app.py  test_gateway_config.py  test_logging.py  test_openai_provider.py  test_package_layout.py  test_runtime.py  test_storage.py  test_telegram_transport.py  test_tools.py
